prevent scrolling on mobile (attempt 07).  resizing toolbar.

--- a/style.css
+++ b/style.css
@@ -13,31 +13,30 @@ canvas{
 #toolbar{
 	position: fixed;
 	top: 0;
-	background-color: rgba(0,0,0,0.2);
 	width: 100%;
-	height: 110px;
+	height: 40px;
 }
 div{
 	display: inline-block;
 }
 button{
-	height: 90px;
-	width: 90px;
+	height: 30px;
+	width: 30px;
 	border-radius: 50%;
 	padding: 0;
-	margin: 12px;
+	margin: 6px 3px 6px 3px;
 	vertical-align: middle;
-	font-size: 64px;
+	font-size: 24px;
 }
 .toolbarText{
-	font-size: 64px;
+	font-size: 24px;
 	margin: 0;
 	padding: 0;
 	padding: 18;
 }
 #brushSize{
-	width: 100px;
-	height: 100px;
+	width: 10px;
+	height: 10px;
 	background-color: black;
 	color: white;
 	border-radius: 50%;
@@ -46,8 +45,8 @@ button{
 	border-color: black;
 }
 .toolbarSpacing{
-	width: 100px;
-	height: 100px;
+	width: 30px;
+	height: 30px;
 	vertical-align: middle;
 	margin-left: 20px;
 }
